# geant4_coursework

./: CMakeLists.txt  README.md  minimal.cc  vis.mac
include/: ActionInitialization.hh  DetectorConstruction.hh  PrimaryGeneratorAction.hh  RunAction.hh  SensitiveDetector.hh  SteppingAction.hh
src/: ActionInitialization.cc  DetectorConstruction.cc  PrimaryGeneratorAction.cc  RunAction.cc  SensitiveDetector.cc  SteppingAction.cc  geodesic_freq4_coords.csv
